grammar.txt
// Tokens
{ } ( ) ; == = ! <= & | - ret fn var if
identifer: [a-zA-Z][a-zA-Z0-9_]^?
number: [+-]^?[0-9][0-9]^?

// Lexemes

<program> 		:= <functions>
<functions>		:= <func> <functions> | epsilon

<stmtlist>		:= <stmt> ; <stmtlist> | epsilon
<stmt>			:= <declaration> | <expression> | <return> | <if>

<return>		:= 
<declaration>	:= var <assign>
<assign>		:= identifier = <expression>

<func>			:= fn identifier ( <arglist> ) { <stmtlist> }
<funcCall>		:= identifier ( <paramlist> )
<expression>	:= <sub> | <expressionNonMath>
<expressionNonMath> := ( <expression> ) | <assign> | <funcCall> | identifier | <logic>

<logic>			:= <leq>
<leq>			:= <= <expression> <equals> | <equals>
<equals>		:= == <expresion> <or> | <or>
<or>			:= | <expression> <and> | <and>
<and>			:= & <expression> <not> | <not>
<not>			:= ! <expression> | <expression>

<arglist>		:= identifier , <arglist> | identifier | epsilon
<paramlist>		:= <expression> , <paramlist> | <expression> | epsilon

<if>			:= if ( <expression> ) { <stmtlist> }

<sub>			:= - <expression> <sub> | <expression>
